--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.2",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.9",
+    "lucide-react": "^0.454.0",
     "next": "14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.11.9",
-    "@react-three/fiber": "^8.17.10",
-    "@react-three/drei": "^9.117.3",
-    "three": "^0.170.0",
-    "lucide-react": "^0.454.0",
-    "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.3.0"
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@types/node": "^22.8.6",
